--- a/index.html
+++ b/index.html
@@ -3,43 +3,52 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>صدقة جارية على روح كابتن منار خليفه</title>
+  <title>صدقة جارية على روح كابتن منار خليفة</title>
   <style>
     html, body {
       margin: 0;
       padding: 0;
       height: 100%;
       width: 100%;
-      background: url('https://l.top4top.io/p_35776k5si1.jpg') no-repeat center center fixed;
+      background: url('https://a.top4top.io/p_35778c1x51.jpg') no-repeat center center fixed;
       background-size: contain;
+      background-color: black;
       overflow: hidden;
       font-family: 'Amiri', serif;
+      text-align: center;
       color: white;
+    }
+
+    #overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
       display: flex;
       align-items: center;
       justify-content: center;
-      text-align: center;
-      background-color: black;
+      background: rgba(0, 0, 0, 0.6);
+      color: #fff;
+      font-size: 1.3rem;
+      z-index: 10;
       cursor: pointer;
     }
-    #message {
-      background: rgba(0, 0, 0, 0.5);
-      padding: 20px 40px;
-      border-radius: 20px;
-      font-size: 1.3rem;
+
+    audio {
+      display: none;
     }
-    audio { display: none; }
   </style>
 </head>
 <body>
-  <div id="message">👆 اضغط في أي مكان لتبدأ تلاوة القرآن الكريم بصوت العفاسي</div>
-  <audio id="player"></audio>
+  <div id="overlay">👆اضغط في أي مكان لتبدأ التلاوة </div>
+  <audio id="player" preload="auto"></audio>
 
   <script>
+    const overlay = document.getElementById('overlay');
     const player = document.getElementById('player');
-    const message = document.getElementById('message');
-    const surahs = [];
 
+    const surahs = [];
     for (let i = 1; i <= 114; i++) {
       const num = i.toString().padStart(3, '0');
       surahs.push(`https://server8.mp3quran.net/afs/${num}.mp3`);
@@ -53,7 +62,7 @@
         player.volume = 0.8;
         player.play().then(() => {
           console.log(`تشغيل السورة رقم ${index + 1}`);
-        }).catch(err => console.warn('لم يتم التشغيل:', err));
+        }).catch(err => console.warn('خطأ في التشغيل:', err));
 
         player.onended = () => {
           index++;
@@ -62,17 +71,10 @@
       }
     }
 
-    function startPlayback() {
-      message.textContent = "📖 جاري تشغيل القرآن الكريم بصوت العفاسي...";
+    overlay.addEventListener('click', () => {
+      overlay.style.display = 'none';
       playNext();
-      setTimeout(() => message.style.opacity = '0', 4000);
-      document.removeEventListener('click', startPlayback);
-      document.removeEventListener('touchstart', startPlayback);
-    }
-
-    // أول تفاعل من المستخدم فقط (نقرة أو لمس)
-    document.addEventListener('click', startPlayback, { once: true });
-    document.addEventListener('touchstart', startPlayback, { once: true });
+    });
   </script>
 </body>
 </html>
