Change background image in index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       padding: 0;
       height: 100%;
       width: 100%;
-      background: url('https://a.top4top.io/p_35778c1x51.jpg') no-repeat center center fixed;
+      background: url('https://l.top4top.io/p_35776k5si1.jpg') no-repeat center center fixed;
       background-size: contain;
       background-color: black;
       overflow: hidden;
